# stub-package

./: .gitignore  cabal.project  flake.nix  neo.json  stub-package.cabal
src/: StubPackage.hs
